# raylib-scene-engine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt  Notes.md  README.md
engine/include/core/: Engine.h  GameCallbacks.h  SceneManager.h  WindowManager.h
engine/include/entities/: Entity.h
engine/include/graphics/: Renderer.h
engine/include/scenes/: Scene.h
engine/lib/: entt.hpp
engine/src/core/: Engine.cpp  WindowManager.cpp
engine/src/entities/: Entity.cpp
engine/src/scenes/: Scene.cpp
game/: CMakeLists.txt  README.md
game/include/scenes/: TestScene.h
game/src/: main.cpp
game/src/scenes/: TestScene.cpp
include/core/: Game.h  SceneManager.h
src/: main.cpp
src/core/: Game.cpp
